--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "fastapi>=0.116.1",
     "imblearn>=0.0",
     "joblib>=1.5.1",
+    "jupyter>=1.1.1",
     "matplotlib>=3.10.5",
+    "notebook>=7.4.5",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pickl>=0.3.0",
@@ -17,4 +19,5 @@ dependencies = [
     "scipy>=1.16.1",
     "seaborn>=0.13.2",
     "uvicorn>=0.35.0",
+    "xgboost>=3.0.4",
 ]
