--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dash>=3.2.0",
     "fastapi>=0.116.1",
     "imblearn>=0.0",
     "joblib>=1.5.1",
@@ -15,6 +16,8 @@ dependencies = [
     "pandas>=2.3.2",
     "pickl>=0.3.0",
     "plotly>=6.3.0",
+    "pydantic>=2.11.7",
+    "requests>=2.32.5",
     "scikit-learn>=1.7.1",
     "scipy>=1.16.1",
     "seaborn>=0.13.2",
