--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "dash>=3.2.0",
     "fastapi>=0.116.1",
+    "http-status>=1.0.0",
+    "httpx>=0.28.1",
     "imblearn>=0.0",
     "joblib>=1.5.1",
     "jupyter>=1.1.1",
+    "logging>=0.4.9.6",
     "matplotlib>=3.10.5",
     "notebook>=7.4.5",
     "numpy>=2.3.2",
@@ -21,6 +24,7 @@ dependencies = [
     "scikit-learn>=1.7.1",
     "scipy>=1.16.1",
     "seaborn>=0.13.2",
+    "status>=0.2.5",
     "uvicorn>=0.35.0",
     "xgboost>=3.0.4",
 ]
