--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "scipy>=1.16.1",
     "seaborn>=0.13.2",
     "status>=0.2.5",
+    "tensorflow>=2.20.0",
     "uvicorn>=0.35.0",
     "xgboost>=3.0.4",
 ]
