--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dash>=3.2.0",
+    "dash-bootstrap-components>=2.0.4",
     "fastapi>=0.116.1",
     "http-status>=1.0.0",
     "httpx>=0.28.1",
