--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
-name = "hospital-readmission-prediction-and-analysis"
+name = "synthea-hospital-dashboard"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.119.1",
     "flask>=3.1.2",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.7",
