--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.119.1",
     "flask>=3.1.2",
+    "flask-cors>=6.0.1",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "plotly>=6.3.1",
     "pydantic>=2.12.3",
     "pyspark>=4.0.1",
     "python-dotenv>=1.1.1",
