--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,5 @@ dependencies = [
     "seaborn>=0.13.2",
     "streamlit>=1.50.0",
     "streamlit-aggrid>=1.1.9",
+    "streamlit-lottie>=0.0.5",
 ]
